--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.4.35",
-    "tailwindcss": "^4.1.1"
+    "tailwindcss": "^4.1.1",
+    "vite": "^7.0.6"
   }
 }
