--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^4.1.1",
     "vite": "^5.2.10"
+  },
+  "dependencies": {
+    "@vitejs/plugin-react": "^4.7.0"
   }
 }
