--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
     "tailwind": "tailwindcss -i ./index.css -o ./dist/output.css --watch"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.4.35",
     "tailwindcss": "^4.1.1",
     "vite": "^5.2.10"
-  },
-  "dependencies": {
-    "@vitejs/plugin-react": "^4.7.0"
   }
 }
