Fix: React deps + Vite config optimized for Vercel

--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^4.1.1",
     "vite": "^5.2.10"
+  },
+  "dependencies": {
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   }
 }
