--- a/package.json
+++ b/package.json
@@ -4,17 +4,30 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "tailwind": "tailwindcss -i ./index.css -o ./dist/output.css --watch"
+    "preview": "vite preview"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^4.1.1",
-    "vite": "^5.2.10"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
+    "vite": "^5.4.19"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "framer-motion": "^12.23.12",
+    "node-fetch": "^3.3.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.7.1",
+    "react-tsparticles": "^2.12.2",
+    "rollup": "^4.46.2",
+    "tsparticles": "^3.9.1"
   }
 }
